Review fixes: rollback default configs for get details nodes